Finalize TOS function correction front-end code

--- a/resources/private/common-html/sass/partials/_archival-summary.scss
+++ b/resources/private/common-html/sass/partials/_archival-summary.scss
@@ -178,7 +178,7 @@
     display: inline-block;
   }
   select, input {
-    min-width: 350px;
+    width: 350px;
     min-height: 40px;
     box-sizing: border-box;
   }
