Fix styling bugs in TOS function correction form

--- a/resources/private/common-html/sass/partials/_archival-summary.scss
+++ b/resources/private/common-html/sass/partials/_archival-summary.scss
@@ -176,10 +176,14 @@
   }
   .form-part {
     display: inline-block;
+    vertical-align: bottom;
+    line-height: normal;
   }
   select, input {
     width: 350px;
     min-height: 40px;
     box-sizing: border-box;
+    display: inline-block;
+    margin: 0;
   }
 }
