--- a/resources/private/common-html/sass/views/_resources.scss
+++ b/resources/private/common-html/sass/views/_resources.scss
@@ -13,16 +13,24 @@
     td {
       background: $gray246;
       padding: $marginS;
+      width: 19%;
 
       &:nth-child(even) {
-       background: white;
+        background: white;
       }
 
       div.timeline-slot {
-       height: $baseline*2;
-       &:hover {
-         background: $gray221;
-       }
+        height: 30px; // 1 px per minute
+        border-bottom: 1px solid #ccc;
+        &:hover {
+          background: $gray221;
+        }
+      }
+
+      .reserved-slot {
+        position: absolute;
+        background-color: $orange-light;
+        width: 100%;
       }
     }
   }
