Css fix, operation tree: list-style-type: circle only for ul lists

--- a/resources/private/common-html/sass/partials/_tree.scss
+++ b/resources/private/common-html/sass/partials/_tree.scss
@@ -68,7 +68,7 @@ $tree-height: 320px;
     width: $tree-width;
     float: left;
     text-align: left;
-    li {
+    ul li {
       list-style-type: circle;
       a {
         @include link;
