Render lupamaarays maarays field as text paragraph.
Bug fix: review notes whitespace handling in the table.

--- a/resources/private/common-html/sass/partials/_forms.scss
+++ b/resources/private/common-html/sass/partials/_forms.scss
@@ -429,6 +429,11 @@ input.form-input.inline {
  width: $cols2;
 }
 
+.form-paragraph {
+  white-space: pre-wrap;
+  padding-left: 1em;
+}
+
 // docgen-spefic styles
 .docgen-content {
   transition: width 600ms;
