Checkbox (and wrapper) style fixes.

--- a/resources/private/common-html/sass/partials/_forms.scss
+++ b/resources/private/common-html/sass/partials/_forms.scss
@@ -1038,6 +1038,10 @@ $max-columns: 12;
 }
 
 @mixin label-checkbox ($label-cls, $size: $lupicon-size ) {
+  label.#{$label-cls} {
+  width: 100%;
+  display: inline-block;
+}
   .#{$label-cls}:before {
     @include lupicon-font( $size );
     content: "\e603";
@@ -1056,7 +1060,8 @@ $max-columns: 12;
 
   input[type=checkbox]:disabled + .#{$label-cls}:before {
     cursor: initial;
-    opacity: .5;
+    color: $checkbox-color;
+    background-color: $input-disabled-background-color;
   }
 }
 
@@ -1084,8 +1089,17 @@ $max-columns: 12;
 
   .checkbox-wrapper {
     border: 1px solid $checkbox-border-color;
-    padding: 7px;
+    padding: {
+      left: 7px;
+      right: 0;
+      bottom: 7px;
+      top: 7px;
+    }
   }
+  .checkbox-wrapper--disabled {
+    background-color: $input-disabled-background-color;
+  }
+
   .radio-wrapper {
     border: 1px solid $radio-border-color;
     padding: $marginS $marginL $marginS $marginS;
@@ -1136,6 +1150,7 @@ $max-columns: 12;
   }
 
   input[type=checkbox], input[type=radio] {
+    display: inherit;
     opacity: 0;
     width: 0;
     height: 0;
