--- a/resources/private/common-html/sass/partials/_tables.scss
+++ b/resources/private/common-html/sass/partials/_tables.scss
@@ -269,5 +269,8 @@ table.review-buildings-table {
     border: none;
     text-align: center;
   }
+  div.checkbox-wrapper--disabled {
+    background-color: initial;
+  }
   @include label-checkbox( checkbox-empty-label, 30px ) {}
 }
