--- a/resources/private/common-html/sass/partials/_responsive.scss
+++ b/resources/private/common-html/sass/partials/_responsive.scss
@@ -12,7 +12,7 @@ $narrow-breakpoint:  991px;
 
 
 // On Windows Phone the zooming + position: fixed sems
-// cause problems when zooming. We circumwent the
+// cause problems when zooming. We circumvent the
 // issue by making the the viewport initially bigger.
 // Commented out for now because it messes up the
 // newer desktop IEs as well.
