--- a/resources/private/common-html/sass/main.scss
+++ b/resources/private/common-html/sass/main.scss
@@ -115,8 +115,6 @@
 @import "partials/_applications_search";
 @import "partials/_indicator";
 @import "partials/_indicator-icon";
-@import "partials/_bulletins";
-@import "partials/_bulletin-comments";
 @import "partials/_guests";
 @import "partials/_case-file";
 
@@ -139,6 +137,10 @@
 @import "views/_company";
 @import "views/_attachment_multiselect";
 @import "views/_openlayers2";
+
+// Bulletins dpepends on application
+@import "partials/_bulletins";
+@import "partials/_bulletin-comments";
 
 /*------------------------------------*\
     OTHER
