--- a/resources/private/common-html/sass/views/_application.scss
+++ b/resources/private/common-html/sass/views/_application.scss
@@ -12,24 +12,7 @@ $app-gray-light: $gray246;
 $app-gray-dark:  $gray221;
 $app-gray-darkest: $gray187;
 
-
-/*Summary styles*/
-.application_summary {
-  background-color: $app-gray-bg;
-  border-bottom: 2px solid $app-gray-darkest;
-  min-height: 320px + $marginM;
-  padding: $marginS 0 0 0;
-  position:  relative;
-  //z-index: 5;
-  display: block;
-  float: none;
-  .container {
-    margin-bottom: 0;
-  }
-  // Since flexbox is not supported widely enough,
-  // we make the div ordering with absolute positioning.
-  // Preamble is not used in neighbors' view (no actions).
-  .preamble {
+@mixin preamble-common {
     position: relative;
     min-height: 280px; // at least the size of the map container
     padding: {
@@ -54,7 +37,10 @@ $app-gray-darkest: $gray187;
       // determine their size autonomously.
       right: 0;
     }
-    @media (max-width: $narrow-breakpoint) {
+}
+
+@mixin preamble-breakpoint( $breakpoint: $narrow-breakpoint ) {
+   @media (max-width: $breakpoint) {
       padding: 0;
       .application-map-container, .application_actions {
         position: relative;
@@ -71,7 +57,29 @@ $app-gray-darkest: $gray187;
         float: right;
         margin-right: $marginL; // Align with summary info.
       }
+      @content;
     }
+} 
+
+/*Summary styles*/
+.application_summary {
+  background-color: $app-gray-bg;
+  border-bottom: 2px solid $app-gray-darkest;
+  min-height: 320px + $marginM;
+  padding: $marginS 0 0 0;
+  position:  relative;
+  //z-index: 5;
+  display: block;
+  float: none;
+  .container {
+    margin-bottom: 0;
+  }
+  // Since flexbox is not supported widely enough,
+  // we make the div ordering with absolute positioning.
+  // Preamble is not used in neighbors' view (no actions).
+  .preamble {
+    @include preamble-common;
+    @include preamble-breakpoint;
   }
   li {
    display: inline;
