--- a/resources/private/common-html/sass/main.scss
+++ b/resources/private/common-html/sass/main.scss
@@ -137,7 +137,7 @@
 @import "views/_company";
 @import "views/_attachment_multiselect";
 @import "views/_openlayers2";
-@import "views/_resources";
+@import "views/_calendars";
 
 // Bulletins dpepends on application
 @import "partials/_bulletins";
