--- a/resources/public/lp-static/css/main.css
+++ b/resources/public/lp-static/css/main.css
@@ -1,5 +1,11 @@
-@import url('main-blessed1.css?z=1462951578474');
+@import url('main-blessed1.css?z=1463062817167');
 
+/* line 236, ../../../private/common-html/sass/views/_application.scss */
+.application_summary .application_summary_info .state-indication div.open .open-box {
+  color: white;
+  background-color: #2ca92c;
+  display: inline-block;
+}
 /* line 192, ../../../private/common-html/sass/views/_application.scss */
 .application_summary .application_summary_info .state-indication div.open .open-box:after {
   border-left: 11px solid #2ca92c;
